# swagger-output.json
@@ -24,13 +24,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "example": "any"
-                },
                 "name": {
                   "example": "any"
                 },
-                "author": {
+                "userId": {
                   "example": "any"
                 }
               }
@@ -43,9 +40,6 @@
             "schema": {
               "$ref": "#/definitions/Book"
             }
-          },
-          "401": {
-            "description": "Unauthorized"
           }
         }
       },
@@ -83,11 +77,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "some",
-            "in": "query",
-            "type": "string"
           }
         ],
         "responses": {
@@ -120,10 +109,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "author": {
+                "where": {
                   "example": "any"
                 }
               }
@@ -171,16 +157,41 @@
       "type": "object",
       "properties": {
         "id": {
-          "type": "number",
-          "example": 1
+          "type": "string",
+          "example": "clb3j3xn50008yutbw13cjufb"
         },
         "name": {
           "type": "string",
           "example": "Harry porter"
         },
-        "author": {
+        "userId": {
           "type": "string",
-          "example": "J K Rowling"
+          "example": "clb3j0ur00000yutbm8im7vmu"
+        },
+        "createdAt": {
+          "type": "string",
+          "example": "2022-11-30T10:52:26.514Z"
+        },
+        "updatedAt": {
+          "type": "string",
+          "example": "2022-11-30T10:52:10.144Z"
+        }
+      }
+    },
+    "User": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "example": "clb3j0ur00000yutbm8im7vmu"
+        },
+        "username": {
+          "type": "string",
+          "example": "Harry Porter"
+        },
+        "email": {
+          "type": "string",
+          "example": "abcd.xyz@gmail.com"
         }
       }
     }
